--- a/index.css
+++ b/index.css
@@ -3,6 +3,11 @@
     font-family: 'PT Sans', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .mobile {
     font-size: 18px;
     background-color: white;
@@ -33,7 +38,6 @@
 }
 
 header {
-    color: grey;
     text-align: center;
     margin-top: 100px;
 }
@@ -42,16 +46,14 @@ input {
     margin-top: 4%;
 }
 
-
 button:hover {
     cursor: pointer;
 }
 
 img {
-    height: 16px;
-    width: 40px;
-    margin-right: 1.5%;
-    padding-left: 7px;
+    height: 14px;
+    width: 38px;
+    padding: 0 8px 0 8px;
 }
 
 .error-message {
@@ -86,18 +88,19 @@ li {
     align-items: center;
     justify-content: center;
     font-size: 13px;
-    margin: 0% 0% 1% 1%;
+    margin: 0% 0% 1% 2%;
     padding: 0% 3%;
+    height: 50px;
     border: 1px solid lightgray;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 li, canvas, .mobile {
-    -webkit-box-shadow: 4px 4px 6px 1px #D3D3D3; 
-    box-shadow: 4px 4px 6px 1px #D3D3D3;
+    -webkit-box-shadow: 2px 2px 6px 1px #D3D3D3; 
+    box-shadow: 2px 2px 6px 1px #D3D3D3;
 }
 
-li p, h4 {
+li p {
     flex: 1;
 }
 
@@ -113,7 +116,6 @@ li p, h4 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 4px;
     width: 100%;
 }
 
@@ -128,7 +130,6 @@ main {
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    border-radius: 4px;
 }
 
 .list {
@@ -141,9 +142,10 @@ main {
 }
 
 canvas {
-    border-radius: 1%;
     border: 1px solid lightgray;
-    padding: 1%;
+    padding: 3%;
+    border-radius: 5px;
+
 }
 
 input[type=submit] {
@@ -154,14 +156,15 @@ input[type=submit] {
     align-self: center;
     outline: none;
     font-size: 14px;
-    margin-top: 0%;
     border: 1px solid lightgrey;
+    margin-top: 5%;
 }
 
 input[type=submit]:hover {
-    background: rgb(211,211,211, 0.2)
+    background: rgb(211,211,211, 0.2);
+    -webkit-box-shadow: 4px 4px 6px 1px #D3D3D3; 
+    box-shadow: 4px 4px 6px 1px #D3D3D3;
 }
-
 
 .inp {
     display: inline-block;
@@ -177,7 +180,7 @@ input[type=submit]:hover {
     color: #9098a9;
     font-weight: 500;
     transform-origin: 0 0;
-    transition: all 0.2s ease;
+    transition: all 0.3s ease;
 }
 
 .inp .border {
@@ -189,7 +192,7 @@ input[type=submit]:hover {
     background: #21CE99;
     transform: scaleX(0);
     transform-origin: 0 0;
-    transition: all 0.2s ease;
+    transition: all 0.3s ease;
 }
 
 .inp input {
@@ -200,9 +203,9 @@ input[type=submit]:hover {
     padding: 12px 0;
     height: 48px;
     font-size: 14px;
-    border-bottom: 2px solid lightgray;
+    border-bottom: 1px solid lightgray;
     border-radius: 0;
-    transition: all 0.2s ease;
+    transition: all 0.3s ease;
 }
 
 .inp input:hover {
@@ -237,28 +240,59 @@ input[type=submit]:hover {
     background: #4B0082;
 }
 
+@media screen and (max-width: 1000px) {
+    .all-results {
+        width: 40%;
+        flex-direction: column;
+    }
 
+    .d, .list {
+        width: 100%;
+    }
+
+    .d {
+        padding-bottom: 2%;
+    }
+    
+    li {
+        margin: 1% 0%;
+        padding: 0% 1.5%;
+        height: 70px;
+    }
+
+    li > p {
+        padding-right: 20px;
+    }
+}
 
 @media screen and (max-width: 850px) {
-    
     main {
-        width: 100%;
         padding-top: 15px;
     }
 
+    header {
+        font-size: 12px;
+    }
+
     .all-results {
-        width: 90%;
+        width: 270px;
         flex-direction: column;
     }
 
     li {
-        margin: 2% 0%;
-        padding: 0% 1%;
+        margin: 3% 0%;
+        padding: 0% 3%;
+        max-height: 50px;
+        font-size: 10px;
+    }
+
+    li >p {
+        padding-right: 20px;
     }
 
     .inp input, .inp label {
         width: 270px;
-        height: 50px;
+        height: 40px;
         font-size: 12px;
     }
 
@@ -266,14 +300,19 @@ input[type=submit]:hover {
         width: 270px;
         height: 250px;
         align-self: center;
+        padding-bottom: 2%;
     }
 
     canvas {
-        padding: 1%;
+        padding: 3%;
     }
 
     .list {
         width: 100%;
+    }
+
+    .price {
+        display: none;
     }
 
     input[type=submit] {
@@ -285,5 +324,7 @@ input[type=submit]:hover {
         font-size: 10px;
         margin-top: 0%;
         border: 1px solid lightgrey;
+        margin-top: 5%;
+
     }
 }
