--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ a {
     color: black;
 }
 
-.mobile {
+.navFix {
     font-size: 18px;
     background-color: white;
     overflow: hidden;
@@ -84,9 +84,8 @@ form {
 li {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
     font-size: 13px;
     margin: 0% 0% 1% 2%;
     padding: 0% 3%;
@@ -95,7 +94,7 @@ li {
     border-radius: 5px;
 }
 
-li, canvas, .mobile {
+li, canvas, .navFix {
     -webkit-box-shadow: 2px 2px 6px 1px #D3D3D3; 
     box-shadow: 2px 2px 6px 1px #D3D3D3;
 }
@@ -104,11 +103,11 @@ li p {
     flex: 1;
 }
 
-#deleteAsset {
+.delete {
     border: none;
 }
 
-#deleteAsset:hover {
+.delete:hover {
     color: darkred;
 }
 
@@ -119,7 +118,7 @@ li p {
     width: 100%;
 }
 
-main {
+.container {
     padding-top: 30px;
     display: flex;
     justify-content: center;
@@ -136,7 +135,7 @@ main {
     width: 40%;
 }
 
-.d {
+.chart {
     width: 30%;
     height: 350px;
 }
@@ -145,7 +144,6 @@ canvas {
     border: 1px solid lightgray;
     padding: 3%;
     border-radius: 5px;
-
 }
 
 input[type=submit] {
@@ -231,26 +229,26 @@ input[type=submit]:hover {
     transform: scaleX(1);
 }
 
-.c input:focus + span {
+.crypto input:focus + span {
     color: #4B0082;
     transform: translateY(-7px) scale(0.65);
 }
 
-.c .border {
+.crypto .border {
     background: #4B0082;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
     .all-results {
         width: 40%;
         flex-direction: column;
     }
 
-    .d, .list {
+    .chart, .list {
         width: 100%;
     }
 
-    .d {
+    .chart {
         padding-bottom: 2%;
     }
     
@@ -265,13 +263,14 @@ input[type=submit]:hover {
     }
 }
 
-@media screen and (max-width: 850px) {
-    main {
+@media screen and (max-width: 750px) {
+    .container {
         padding-top: 15px;
     }
 
     header {
         font-size: 12px;
+        padding: 0 10%;
     }
 
     .all-results {
@@ -296,7 +295,7 @@ input[type=submit]:hover {
         font-size: 12px;
     }
 
-    .d {
+    .chart {
         width: 270px;
         height: 250px;
         align-self: center;
@@ -325,6 +324,6 @@ input[type=submit]:hover {
         margin-top: 0%;
         border: 1px solid lightgrey;
         margin-top: 5%;
-
+        background-color: white;
     }
 }
