--- a/index.css
+++ b/index.css
@@ -74,6 +74,7 @@ ul, li {
     list-style-position:inside;
     margin: 0;
     padding: 0;
+    background-color: white;
 }
 
 form {
@@ -236,6 +237,18 @@ input[type=submit]:hover {
 
 .crypto .border {
     background: #4B0082;
+}
+
+.transition .effect {
+    opacity: 0;
+    transform: scale(0);
+    animation: growHeight 0.4s ease forwards;
+  }
+  @keyframes growHeight {
+    to { 
+      opacity: 1;
+      transform: scale(1);
+    }
 }
 
 @media screen and (max-width: 1100px) {
