--- a/index.css
+++ b/index.css
@@ -4,17 +4,13 @@
 }
 
 html { 
-    background: url("assets/stocks-bg.jpeg") no-repeat center center fixed; 
+    background: url("assets/stocks-bg4.png") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
 
-body {
-    z-index: 2;
-    opacity: 1;
-}
 
 a {
     text-decoration: none;
